--- a/webserver.yml
+++ b/webserver.yml
@@ -16,30 +16,19 @@
       src: ./files/index.html
       dest: /var/www/html/index.html
 
-  - name: Habilitar puerto HTTPD/80 en FirewallD 
-    ansible.posix.firewalld:
-      service: http
-      state: enabled
-      permanent: true
-      immediate: true
-      offline: true
-    when: ansible_facts['os_family'] == "RedHat"
-  
-  - name: Habilitar puerto SSH/22 en ufw
-    community.general.ufw:
-      rule: allow
-      state: enabled
-      port: ssh
-      proto: tcp
-    when: ansible_facts['os_family'] == "Debian"
+  - name: Habilitar puertos en firewalld
+    ansible.builtin.include_tasks:
+      file: fwd_loop_task.yml
+    loop:
+      - ssh
+      - http
 
-  - name: Habilitar puerto HTTPD/80 en ufw
-    community.general.ufw:
-      rule: allow
-      state: enabled
-      port: http
-      proto: tcp
-    when: ansible_facts['os_family'] == "Debian"
+  - name: Habilitar puertos en ufw
+    ansible.builtin.include_tasks:
+      file: ufw_loop_task.yml
+    loop:
+      - ssh
+      - http
 
   handlers:
 
