ordeno vars en archivos separados

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,4 +1,4 @@
 #SPDX-License-Identifier: MIT-0
 [defaults]
-inventory=./inventario
+inventory=./inventory/hosts.ini
 interpreter_python=auto_silent
